Trying to use a hook

--- a/AgileTaskAPI.html
+++ b/AgileTaskAPI.html
@@ -86,7 +86,7 @@ HTTP&nbsp;Method:&nbsp;GET</tt></dd></dl>
 Updates&nbsp;a&nbsp;task<br>
 HTTP&nbsp;Method:&nbsp;PUT</tt></dd></dl>
 
-<dl><dt><a name="AgileTaskAPI-__init__"><strong>__init__</strong></a>(self, api_key)</dt><dd><tt>Setup&nbsp;the&nbsp;class</tt></dd></dl>
+<dl><dt><a name="AgileTaskAPI-__init__"><strong>__init__</strong></a>(self, api_key)</dt><dd><tt>Set&nbsp;the&nbsp;api_key&nbsp;for&nbsp;the&nbsp;user&nbsp;for&nbsp;this&nbsp;class&nbsp;instance</tt></dd></dl>
 
 <hr>
 Data and other attributes defined here:<br>
