Forgot to reflect changes in README

--- a/AgileTaskAPI.html
+++ b/AgileTaskAPI.html
@@ -46,8 +46,8 @@
 <td colspan=2><tt>Agile&nbsp;Task&nbsp;API&nbsp;wrapper&nbsp;in&nbsp;python<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%">Methods defined here:<br>
-<dl><dt><a name="AgileTaskAPI-AddTask"><strong>AddTask</strong></a>(self)</dt><dd><tt><a href="http://doc.agiletask.me/new_tasks.html">http://doc.agiletask.me/new_tasks.html</a><br>
-Adds&nbsp;a&nbsp;new&nbsp;task<br>
+<dl><dt><a name="AgileTaskAPI-AddTask"><strong>AddTask</strong></a>(self, name, icebox<font color="#909090">='true'</font>, position<font color="#909090">=1</font>, complete<font color="#909090">='false'</font>)</dt><dd><tt><a href="http://doc.agiletask.me/new_tasks.html">http://doc.agiletask.me/new_tasks.html</a><br>
+Adds&nbsp;a&nbsp;new&nbsp;task&nbsp;given&nbsp;task&nbsp;info<br>
 HTTP&nbsp;Method:&nbsp;POST</tt></dd></dl>
 
 <dl><dt><a name="AgileTaskAPI-DeleteTask"><strong>DeleteTask</strong></a>(self, id)</dt><dd><tt><a href="http://doc.agiletask.me/delete_tasks.html">http://doc.agiletask.me/delete_tasks.html</a><br>
