Update now works. Lots of tests written.

--- a/AgileTaskAPI.html
+++ b/AgileTaskAPI.html
@@ -82,7 +82,7 @@ HTTP&nbsp;Method:&nbsp;GET</tt></dd></dl>
 Returns&nbsp;today's&nbsp;tasks<br>
 HTTP&nbsp;Method:&nbsp;GET</tt></dd></dl>
 
-<dl><dt><a name="AgileTaskAPI-UpdateTask"><strong>UpdateTask</strong></a>(self, id)</dt><dd><tt><a href="http://doc.agiletask.me/update_tasks.html">http://doc.agiletask.me/update_tasks.html</a><br>
+<dl><dt><a name="AgileTaskAPI-UpdateTask"><strong>UpdateTask</strong></a>(self, id, name, icebox, position, complete)</dt><dd><tt><a href="http://doc.agiletask.me/update_tasks.html">http://doc.agiletask.me/update_tasks.html</a><br>
 Updates&nbsp;a&nbsp;task<br>
 HTTP&nbsp;Method:&nbsp;PUT</tt></dd></dl>
 
